--- a/style.css
+++ b/style.css
@@ -5,8 +5,197 @@
   /* Neutral */
   --Dark-Grayish-Blue: #4c545d;
   --Grayis-Blue: #9fabb2;
+  --White: #fff;
 }
 *{
   font-size: 62.5%;
   font-family: 'Bai Jamjuree', sans-serif;
+}
+body{
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+h1{
+  font-size: 3.0rem;
+  margin: 0;
+}
+h2{
+  font-size: 2.4rem;
+  margin: 0;
+}
+h3{
+  font-size: 2.1rem;
+  margin: 0;
+}
+p{
+  font-size: 1.6rem;
+}
+.main-content{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.first-section{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 50px;
+  margin-bottom: 100px;
+}
+.first-section img{
+  width: 80px;
+}
+.first-section h1{
+  text-align: center;
+  color: var(--Dark-Grayish-Blue);
+}
+.first-section p{
+  font-size: 1.6rem;
+  text-align: center;
+  color: var(--Grayis-Blue);
+}
+.first-section-buttons{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.first-section-buttons button{
+  width: 300px;
+  height: 40px;
+  font-size: 1.6rem;
+  font-weight: bold;
+  color: var(--White);
+  border: none;
+  border-radius: 20px;
+  margin-bottom: 12px;
+}
+.first-section-buttons button:nth-child(1){
+  background-color: var(--Strong-Cyan);
+}
+.first-section-buttons button:nth-child(2){
+  background-color: var(--Light-Blue);
+}
+.second-section{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.second-section h2, .second-section h3{
+  text-align: center;
+  padding: 0 24px;
+  color: var(--Dark-Grayish-Blue);
+}
+.second-section p{
+  color: var(--Grayis-Blue);
+  text-align: center;
+  padding: 0 24px;
+}
+.mac-image img{
+  width: 250px;
+  margin-bottom: 20px;
+}
+.third-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 80px;
+}
+.third-section h2{
+  color: var(--Dark-Grayish-Blue);
+}
+.third-section p{
+  color: var(--Grayis-Blue);
+  padding: 0 24px;
+  text-align: center;
+}
+.third-section img{
+  width: 250px;
+}
+.fouth-section{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 80px;
+}
+.tittle{
+  margin-bottom: 40px;
+}
+.tittle h2{
+  color: var(--Dark-Grayish-Blue);
+  text-align: center;
+  padding: 0 24px;
+}
+.tittle p{
+  color: var(--Grayis-Blue);
+  text-align: center;
+}
+.op{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 40px;
+}
+.op img{
+  margin-bottom: 30px;
+}
+.op h3{
+  color: var(--Dark-Grayish-Blue);
+}
+.op p{
+  color: var(--Grayis-Blue);
+  padding: 0 24px;
+  text-align: center;
+}
+.logos{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.logos img{
+  margin-bottom: 60px;
+  /* width: 140px; */
+}
+.fifth-section{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.fifth-section h2{
+  color: var(--Dark-Grayish-Blue);
+  padding: 0 24px;
+  text-align: center;
+}
+.fifth-section p{
+  color: var(--Grayis-Blue);
+  padding: 0 24px;
+  text-align: center;
+}
+.fifth-section-buttons{
+  display: flex;
+  flex-direction: column;
+}
+.fifth-section-buttons button{
+  width: 300px;
+  height: 40px;
+  font-size: 1.6rem;
+  font-weight: bold;
+  color: var(--White);
+  border: none;
+  border-radius: 20px;
+  margin-bottom: 12px;
+}
+.fifth-section-buttons button:nth-child(1){
+  background-color: var(--Strong-Cyan);
+}
+.fifth-section-buttons button:nth-child(2){
+  background-color: var(--Light-Blue);
 }
