--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
   /* Neutral */
   --Dark-Grayish-Blue: #4c545d;
   --Grayis-Blue: #9fabb2;
+  --background: #f5f6f8;
   --White: #fff;
 }
 *{
@@ -30,19 +31,22 @@ h3{
 }
 p{
   font-size: 1.6rem;
+  /* margin: 0; */
 }
 .main-content{
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-image: url(./images/bg-header-mobile.png);
+  background-repeat: no-repeat;
 }
 .first-section{
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-top: 50px;
+  margin-top: 150px;
   margin-bottom: 100px;
 }
 .first-section img{
@@ -168,6 +172,7 @@ p{
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin-bottom: 100px;
 }
 .fifth-section h2{
   color: var(--Dark-Grayish-Blue);
@@ -198,4 +203,35 @@ p{
 }
 .fifth-section-buttons button:nth-child(2){
   background-color: var(--Light-Blue);
+}
+.footer{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--background);
+  padding-top: 30px;
+}
+.logo-footer img{
+  width: 60px;
+  margin-bottom: 40px;
+}
+.first-colummn p, .second-colummn p, .third-colummn p{
+  text-align: center;
+  margin: 0px;
+  margin-bottom: 20px;
+  color: var(--Dark-Grayish-Blue);
+  font-weight: bold;
+}
+.social-networks{
+  display: flex;
+  align-items: center;
+  margin: 32px 0 20px 24px;
+}
+.social-networks a svg{
+  width: 25px;
+  margin-right: 20px;
+}
+.icon{
+  fill: var(--Dark-Grayish-Blue);
 }
